--- a/auth.html
+++ b/auth.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auth</title>
-    <link rel="icon" href="img/favicon.png">
-    <link rel="stylesheet" href="style/global.css">
+    <title>Logar/Criar</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link type="text/css" rel="stylesheet" href="style/auth.css">
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <!-- Other imports -->
+    <script src="js/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="style/sweetalert2.min.css">
 </head>
+
 <body>
+    <div id="loading">Loading&#8230;</div>
+    <div class="bg"></div>
+
+    <div class="auth login">
+        <p class="title">Logar </p>
+        <form method="POST" id="login">
+            <input type="text" name="email" class="field" required="required" placeholder="E-mail ou username" />
+            <input type="password" name="password" class="field" required="required" placeholder="Password" />
+            <button>Entrar</button>
+        </form>
+        <p class="toogle change_auth_create" onclick="$('.register').fadeIn()">Não tenho conta</p>
+    </div>
+
+    <div class="auth register">
+        <p class="title">Criar uma conta</p>
+        <form method="POST" id="register">
+            <input type="text" name="username" minlength="5" maxlength="15" class="field" required="required" placeholder="Username" />
+            <input type="email" name="email" class="field" required="required" placeholder="E-mail" />
+            <input type="password" name="password" minlength="8" class="field" required="required" placeholder="Password" />
+            <input type="password" name="repPassword" minlength="8" class="field" required="required" placeholder="Repetir password" />
+            <button id="criar-conta">Criar conta</button>
+        </form>
+        <p class="toogle" onclick="$('.register').fadeOut()">Já tenho uma conta</p>
+    </div>
 
 </body>
 </html>
