Concertando conexão com banco de dados

--- a/auth.html
+++ b/auth.html
@@ -21,7 +21,7 @@
         <p class="title">Logar </p>
         <form method="POST" id="login">
             <input type="text" name="email" class="field" required="required" placeholder="E-mail ou username" />
-            <input type="password" name="password" class="field" required="required" placeholder="Password" />
+            <input type="password" name="password" class="field" required="required" placeholder="Password" />t
             <button>Entrar</button>
         </form>
         <p class="toogle change_auth_create" onclick="$('.register').fadeIn()">Não tenho conta</p>
